# dbt-study

./: .gitignore  Best Practices.md  Course_Notes.md  Duvidas.txt  EstudoAntigo.yml  EstudoAtual.yml  Notes.md  Notes.txt  README.md  Status.md  Study.yml  new_study.yml  profiles_teste.yml  pyproject.toml  study.yml
project/: dbt_project.yml
project/artifcats-compare/: manifest.json  sources.json
project/macros/: generic_test.sql  group_by_table.sql  testing_macro.sql
project/models/: exposures.yml
project/models/marts/sales/: _sales__models.yml  fact_sales_orders.sql  fact_sales_orders_incremental.sql  joined_fact_sales.sql  testando.sql
project/models/marts/test/: callin_package_utils.sql
project/models/staging/jaffle_shop/: _jaffle_shop__docs.md  _jaffle_shop__models.yml  _jaffle_shop__sources.yml  stg_jaffle_shop_orders.sql  stg_jaffle_shop_people.sql
project/seeds/: example.csv
project/snapshots/: first_snapshot.sql  schema.yml
project/tests/generic/: column_max_value.sql  model_test.sql
project/tests/singular/: teste1.sql
prova/: dbt_project.yml  dbt_project_study.yml  packages.yml
prova/macros/: custom_database_name.sql  eita.sql  generic_test.sql  group_by_table.sql  macros_schema.yml
prova/models/: __sources__.yml  exposures.yml  variable_lets.sql
prova/models/staging/: __schema.yml  target.sql
prova/seeds/: config.yml  csv_test.csv
prova/snapshots/: primeiro_snapshot.sql  schema.yml
prova/tests/: singular1.sql
prova/tests/generic/: another_generic.sql  model_test.sql
prova/tests/singular/: target_sk_target_ids.sql  teste2.sql
(+30 files in other folders)
