[tool.poetry]
name = "dbt"
version = "0.1.0"
description = ""
authors = ["oselio <oseliocandido@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.7.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
